<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        layout="@layout/head_new" />

    <GridView
        android:padding="10dp"
        android:background="@drawable/image_bg"
        android:layout_weight="1.5"
        android:id="@+id/grid_members"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:numColumns="4" >
    </GridView>

    <RelativeLayout
        android:background="@color/background"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:padding="8dp"
            android:background="@drawable/image_bg"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/newsinform"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.medicaltreatment.view.SwitchButton
                android:id="@+id/btn_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                 />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_exit_from_database"
            android:background="@drawable/background_red"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/exit" />

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/qr" />

        <TextView
            android:id="@+id/textView2"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:text="@string/scansignin" />

    </RelativeLayout>

</LinearLayout>
