<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/datasubmitLayout"       
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        layout="@layout/head_new" />
	<ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    <LinearLayout
        android:scrollbars="vertical"
        android:padding="10dp"
        android:background="@color/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/image_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:padding="3dp"
                        android:text="@string/bloodpressure"
                        android:textSize="18dp" />

                    <ImageView
                        android:id="@+id/bloodup_editable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_input_add" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/bloodup_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:editable="false"
                    android:background="#ffffff"                    
                    android:hint="120/90"
                    android:textColor="@color/blue_back"
                    android:textColorHint="@color/blue_back"
                    android:textSize="20dp" >                  
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/image_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:padding="3dp"
                        android:text="@string/heartbeat"
                        android:textSize="18dp" />

                    <ImageView
                        android:id="@+id/heartbeat_editable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_input_add" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/heartbeat_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="#ffffff"
                    android:editable="false"
                    android:hint="70bmp"
                    android:textColor="@color/blue_back"
                    android:textColorHint="@color/blue_back"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/image_bg"
                android:orientation="vertical" >

                <RelativeLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:padding="3dp"
                        android:textSize="18dp"
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/bodyTemp" />

                    <ImageView
                        android:id="@+id/bodytemp_editable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_input_add" />

                </RelativeLayout>
                <EditText 
                    android:editable="false"
                    android:id="@+id/bodytemp_text"
                    android:layout_margin="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColorHint="@color/blue_back"
                    android:textColor="@color/blue_back"
                    android:background="#ffffff"
                    android:hint="@string/reg_bodytemp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_bg"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RelativeLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:padding="3dp"
                        android:textSize="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/photo" />

                    <ImageView
                        android:id="@+id/photo_editable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_input_add" />

                </RelativeLayout>
                <EditText 
                    android:editable="false"
                    android:id="@+id/photo_text"
                    android:layout_margin="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColorHint="@color/blue_back"
                    android:textColor="@color/blue_back"
                    android:background="#ffffff"
                    android:hint="@string/reg_photo"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/image_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:textSize="20dp"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/into" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:textSize="20dp"
                    android:padding="3dp"
                    android:entries="@array/namefield"
                    android:spinnerMode="dropdown"
                    android:text="@string/quickReg"
                    android:layout_marginRight="5dp"
                    android:id="@+id/spinner1"
                    android:background="@color/blue_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:textSize="20dp"
                    android:padding="3dp"
                    android:entries="@array/namefield"
                    android:spinnerMode="dropdown"
                    android:text="@string/quickReg"
                    android:id="@+id/spinner2"
                    android:layout_marginLeft="5dp"
                    android:background="@color/green_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/into_injection_insert"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_btn"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:padding="3dp"
                android:text="@string/insert_item_into" />

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/image_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

			<TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out"
                android:textSize="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

               <Spinner
                   android:entries="@array/namefield"
                   android:spinnerMode="dropdown"
                   android:textSize="20dp"
                   android:padding="3dp"
                   android:text="@string/quickReg"
                   android:id="@+id/Spinner01"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="5dp"
                   android:layout_weight="1"
                   android:background="@color/blue_back" />

               <Spinner
                   android:entries="@array/namefield"
                   android:spinnerMode="dropdown"
                   android:textSize="20dp"
                   android:padding="3dp"
                   android:text="@string/quickReg"
                   android:id="@+id/Spinner02"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_weight="1"
                   android:background="@color/green_btn" />
            </LinearLayout>
            

            <Button
                android:id="@+id/out_injection_extract"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_btn"
                android:padding="3dp"
                android:text="@string/insert_item_into"
                android:textColor="#ffffff"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/image_bg"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >

                <RelativeLayout
                    android:padding="0dp"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/state_patient"
                        android:textSize="20dp" />

                    <ImageView
                        android:id="@+id/content_state_editable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_input_add" />

                </RelativeLayout>

            </LinearLayout>

            <EditText
                android:editable="false"
                android:id="@+id/content_state_text"
                android:background="#ffffff"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/reg_bodytemp"
                 />

        </LinearLayout>
    </LinearLayout>
	</ScrollView>
</LinearLayout>